updated figures and intrepretations

--- a/texFiles/2.3_prior.tex
+++ b/texFiles/2.3_prior.tex
@@ -11,8 +11,8 @@ El Gordo was first mentioned in the Sydney University Molonglo Sky Survey
 The higher resolution radio observation conducted by \cite{L13} at 610
 \mega Hz and 2.1 \giga Hz confirms that the identity of the radio relic
 after removing effects of radio point sources. Radio relics have been
-suggested to be able to constrain the mass ratios, the projection and the merger configuration.
-\citep{vanWeeren10} 
+suggested to be able to constrain the mass ratios, the projection and the
+merger configuration \citep{vanWeeren10}. 
 
 %%%%%%%%%% WAIT WHAT AM I TRYING TO SAY????
 %Ever since the first detection of radio relic, cosmological hydrodynamical simulations of
