--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -49,11 +49,10 @@
 % the SE relic? Yes! 
 % do we need to explain why we are only using the NW relic not the SE
 % relic?
-We demonstrate that despite substantial uncertainty in the time
-evolution of the shock, we can give constraints on the likelihood of the
+We give constraints on the likelihood of the
 outgoing and incoming merger scenarios by comparing the observed and the
 simulated position of the radio relic.
-The key to the success of this method depends on our ability to estimate the
+This method depends the estimate of the
 time evolution of the relic velocity, which gives the upper and lower
 bounds on the possible position of the relic for each scenario. The
 uncertainty of the time evolution of the velocity of the shock stem from
@@ -63,14 +62,16 @@ others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
 of the shock velocity requires detailed numerical simulation similar to
 \citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc. 
 We draw physical insight from the simulations of the merger shock of the
-Bullet cluster from \citet{Springel2007} and \citet{Paul2011b}, which both show
-that, right after the collision of the subclusters, the shock speed is
-comparable to the merger speed of the two subclusters in the center of mass
-frame.  While \citet{Paul2011b} reports the shock speed decreases only
-slightly as it propagates away from the center of mass, the Bullet shock
-speed mildly drops by $\sim 14\%$ in the 300~\mega yr period after the
-formation of the Bullet shock versus a $\sim65\%$ drop for the main
-subcluster. \par  
+staged numerical simulation of the Bullet cluster from \citet{Springel2007}
+and the cosmological simulation from \citet{Paul2011b}. Right after
+the collision of the subclusters, \citet{Springel2007} shows that the shock speed is
+comparable to the merger speed of the two subclusters; the shock speed
+dropped only by $\sim 14\%$ in the $300~\mega$yr period while the speed of
+the main subcluster in the simulation dropped by $\sim65\%$ in the center
+of mass frame. On the other hand, \citet{Paul2011b} showed that the shock
+speed was $\sim1.5$ times the relative collisional speed of the subcluster
+shortly after the collision and the shock speed decreases only
+slightly as it propagates away from the center of mass. \par  
 We approximated the upper and lower bounds of the NW relic speed with the
 simulated speeds of the NW subcluster.  We simplified the calculation by
 working in the center of mass frame where the shock speed is expected to
@@ -79,39 +80,33 @@ The projected separation of the shock is approximated as:
 \begin{equation}
 	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
 \end{equation}
-where $s_{proj}$ is the estimated projected separation and we estimated the
+where the quantities with hats on the right hand side of the equations were
+inferred from the simulation, and $s_{proj}$ is the estimated projected separation and we estimated the
 upper and lower bounds of the time-averaged velocity
 $\langle v_{relic} \rangle$ of the shock between
 the collision of the subclusters and the observed time as:  
 \begin{equation}
-	\beta~v_{3D,1}(t_{col}) < \langle v_{relic} \rangle \lesssim v_{3D,1}(t_{col}) 
+	\langle v_{relic} \rangle \approx \beta~v_{3D,1}(t_{col})  
 \end{equation}
-where $0 < \beta < 1.0$ is a factor that we introduce to denote the slow-down
-of the relic and $v_{3D,1}(t_{col})$ refers to the collisional velocity of
+where $0.8 \leq \beta \leq 1.2$ is a factor that we introduce to represent the
+uncertainty of the speed of the relic and $v_{3D,1}(t_{col})$ refers to the collisional velocity of
 the NW relic in the center-of-mass frame. The upper bound can be
 approximated as the collisional speed of the NW subclusters due to how the
 shock is powered by the collision. After the collision, it is unlikely that
-there would be significant energy injected into the shock to speed up the shock such that
-the shock travels much faster than the collision speed of the subcluster. 
-While the shock does not experience gravitational deceleration as a
+there would be significant energy injected into the shock to speed up the
+shock such that the shock travels much faster than the collision speed of the subcluster. While the shock does not experience gravitational deceleration as a
 pressure wave, some dissipative processes may have slowed down the shock
-wave slightly as it propagates. By making use of a
+wave slightly as it propagated. By making use of a
 range of $\beta$ values, we examine the how the rate of slow down would
 give a different lower bound of the projected separation of the relic.   
 
 We compare the bounds with the observed position of the NW relic  at RA =
 01:02:46, Decl. = $-49$:14:43 \citep{L13}.
-Three sources of radio relic
-were identified - including the NW, SE and the E relic. The NW radio
-relic possesses the most extended geometry among all the identified relic source. 
-We do not refer to the The SE nor the E radio relic in this calculation
-since we do not have an estimation of the shock speed of the SE relic
-nor the E relic from \citealt{L13} for comparison.    
-From \citet{L13}, the estimated speed of the NW relic is $4300 \pm
-^{800}_{500}\kilo\meter~\second^{-1}$. This speed is compatible with our
-simulated collisional speed but the conversion of the frame of reference is
-non-trivial since the speed is measured with respect to on the turbulent
-intracluster gas as a Mach number.
+Three sources of radio relic were identified, including the NW, SE and the
+E relic. The NW radio relic possesses the most extended geometry among all
+the identified relic source. We do not refer to the The SE nor the E radio
+relic in this calculation since we do not have an estimation of the shock
+speed of the SE relic nor the E relic from \citealt{L13} for comparison.    
 
 
 %We incorporate the calculated shock speed of the radio relic as part of
