--- a/texFiles/app_c_result_plots.tex
+++ b/texFiles/app_c_result_plots.tex
@@ -9,7 +9,7 @@ before this figure or else it may be confusing to readers)
 	\caption{Comparison of the observed position of the relic with the
 	predicted position from the two simulated merger scenarios, with
 	polarization prior applied to the PDFs.
-	\label{polarprior_bounds}}
+	\label{fig: polarprior_bounds}}
 \end{figure}
 
 
