added result section for merger velocity

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -25,12 +25,13 @@ thousand \kilo \meter~\second$^{-1}$. The offsets of different components
 of the subclusters dissociate show how various interactions of the different
 components are at work. Observables such as offset between dark
 matter and the other components may suggest dark matter self-interaction
-(REF).  The difference of the galaxy colors in a merging cluster from relaxed cluster can also verify effects of environment on galaxy evolution.\par
+(REF).  (The following sentence does not actually fit in this paragraph and
+I have to put it somewhere else) difference of the galaxy colors in a merging cluster from relaxed cluster can also verify effects of environment on galaxy evolution.\par
 %\textbf{background of El Gordo}
 %\textbf{What literature exists for El Gordo.}
 
-van Weeren 2011a suggests that the double radio relic can provide clue to
-collisional parameters ???
+%van Weeren 2011a suggests that the double radio relic can provide clue to
+%collisional parameters ???
 Ever since the discovery of El Gordo in the Atacama Camera Telescope (ACT)
 survey (REF), there is an ongoing effort for collecting comprehensive data
 for El Gordo.
@@ -42,7 +43,7 @@ discussion to inferring the time-since-collision.
 From the spectroscopy and Dressler-Schecter test for the member galaxies  in Sif\'{o}n et al. (2013), El Gordo is confirmed to be a binary merger 
 without significant substructures. This picture is further supported by the
 weak lensing analysis by Jee et al. (2013). The weak lensing analysis shows
-a mass ratio of 2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
+a mass ratio of $\sim$2:1  between the two main subclusters, named according to their location as the northeast (NW) and southeast (SE) subclusters respectively. 
 (See Figure \ref{fig:config}). El Gordo has interesting intracluster medium morphology as shown in the X-ray. In the northwest, it shows a wake feature, i.e.,
 depression in the X-ray emissivity, while in the southeast, it shows
 highest X-ray emissivity indicative of a cold gas core southeast of the
@@ -160,7 +161,8 @@ substructures makes modeling of El Gordo with only two subclusters possible.
 
 In this paper, we adopt the following conventions: (1) we
 assume the standard $\Lambda$CDM cosmology with $\Omega_{m} = 0.3$, $\Omega_{\Lambda} = 0.7$. (2) All confidence intervals are quoted at the 68\% level unless otherwise stated. 
-(3) All credible intervals (a.k.a. Bayesian confidence intervals) are also
+(3) All credible intervals (a.k.a. Bayesian confidence intervals that also
+takes into account prior probability) are also
 quoted at the 68\% level unless otherwise stated and are central credible
 intervals. (4) All quoted masses ($M_{200c}$) are based on mass contained
 within $r_{200}$ where the mass density is 200 times the critical density
