--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -15,7 +15,7 @@ functions (PDFs), included the masses ($M_{200_{NW}},M_{200_{SE}}$) the
 redshifts ($z_{NW}, z_{SE}$) and the projected separation of the two
 subclusters ($d_{proj}$).  
 %For the $j-$th realization, w
-In each realization, we randomly drew the samples of the PDFs.
+In each realization, we randomly drew samples of the PDFs.
 %
 %\begin{equation}
 %	D_i^{j} \sim \mathcal{L}(\vec{\theta}|D_i) =  P(D_i | \vec{\theta})
