--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -39,10 +39,12 @@ To summarize, the prior derived from polarization information takes the form of:
 \begin{equation}
 P(\alpha) = 
 	\begin{cases}
-	& \text{const. for  }\alpha < 39 \degree \\ 
+	& \text{const. $>$ 0 for  }\alpha < 39 \degree \\ 
 	& 0 \text{ otherwise}
 	\end{cases}
 \end{equation}
+(I removed the figure showing the prior and replaced it with the above
+equations since the equation is more compact.)
 \par 
 
 %Due to these likely variations in the true magnetic field, the true observable integrated polarization values at a given $\alpha$ can be lower than what is predicted by \cite{E98}. 
