--- a/texFiles/2.3_prior.tex
+++ b/texFiles/2.3_prior.tex
@@ -4,15 +4,25 @@ unphysical realizations via the application of prior probability.
 Our default Monte Carlo priors are described in D13 and in Appendix
 \ref{app: results}. We also examine the effects of applying 
 two priors derived based on the position and the integrated polarization
-fraction of the radio relic of El Gordo respectively. El Gordo shows
-remarkable double radio relics on the periphery (M11). The radio relic  of
-El Gordo was first mentioned in the Sydney University Molonglo Sky Survey
-(SUMSS) data in low resolution at 843 MHz \citep{Mauch03} as shown in M11.
-The higher resolution radio observation conducted by \cite{L13} at 610
-\mega Hz and 2.1 \giga Hz confirms that the identity of the radio relic
-after removing effects of radio point sources. Radio relics have been
-suggested to be able to constrain the mass ratios, the projection and the
-merger configuration \citep{vanWeeren10}. 
+fraction of the radio relic of El Gordo respectively. (* I actually removed
+the position prior section from the paper since the position prior does not
+provide tight constraint on the parameters). \par 
+(Not sure if the following fits best here but it is definitely an intro to
+the priors) 
+El Gordo shows radio relics on the periphery of both subclusters
+\citepalias{M11}. The
+radio relic  of El Gordo was first mentioned in the Sydney University
+Molonglo Sky Survey (SUMSS) data in low resolution at 843 MHz
+\citep{Mauch03} as shown in M11. The higher resolution radio observation
+conducted by \cite{L13} at 610 \mega Hz and 2.1 \giga Hz confirms that the identity of the radio relic
+after removing effects of radio point sources. 
+Three main sources of radio relic were identified, including the NW, SE and the
+E relic. The NW radio relic possesses the most extended geometry among all
+the identified relic source. We do not refer to the The SE nor the E radio
+relic in our calculation since we do not have an estimation of the shock
+speed of the SE relic nor the E relic from \citet{L13} for comparison.    
+%Radio relics have been suggested to be able to constrain the mass ratios,
+%the projection and the merger configuration \citep{vanWeeren10}. 
 
 %%%%%%%%%% WAIT WHAT AM I TRYING TO SAY????
 %Ever since the first detection of radio relic, cosmological hydrodynamical simulations of
