--- a/texFiles/4.3_comparison_merger.tex
+++ b/texFiles/4.3_comparison_merger.tex
@@ -23,11 +23,14 @@ both the Bullet and the Musketball, so El Gordo is probably a better probe of SI
 %$\alpha \sim 41.7\degree$, one can naively calculate that the observed relic
 %would be only $\cos(41.7 \text{ deg}) \sim .75 $ the size of the original relic. %\end{enumerate}
 
-\textbf{With this new piece of evidence, we find that the absence of an
+With this new piece of evidence, we find that the absence of an
 X-ray shock feature from El Gordo, may not be due to the merger speed being
-low, as suggested by J13.} 
+low, as suggested by \citetalias{Jee13}. 
 In particular, taking into account that the estimated projection angle of 
-$\sim 41.7\degree$, we estimate the projected relative velocity to be 597 \kilo \meter~\second$^{-1}$, which is consistent with the estimated line-of-sight velocity differences of $586 \pm  96~\kilo \meter ~\second^{-1}$ in M11. 
+$\sim 41.7\degree$, we estimate the projected relative velocity to be 597
+\kilo \meter~\second$^{-1}$, which is consistent with the estimated
+line-of-sight velocity differences of $586 \pm  96~\kilo \meter
+~\second^{-1}$ in \citetalias{M11}. 
 
 Furthermore, the study from \cite{L13} Lindner et al. has come up
 with an estimation of the shock velocity of the radio relic of El Gordo as 
