--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -28,7 +28,6 @@ Leiden, Netherlands\\}
     \input{abstract}
 \end{abstract}
 %-----------------------------------------------------------------------
-
 \begin{keywords}
 gravitational lensing -- dark matter -- cosmology: observations -- X-rays:
 galaxies: clusters -- galaxies: clusters: individual (ACT-CL J0102-4915) --
@@ -37,6 +36,7 @@ galaxies: high redshift
 
 %-----------------------------------------------------------------------
 \section{Introduction} 
+(NOT READY FOR PRIME TIME)
 \input{1_intro}
 
 %-----------------------------------------------------------------------
