--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -51,17 +51,18 @@
 % relic?
 We give constraints on the likelihood of the
 outgoing and incoming merger scenarios by comparing the observed and the
-simulated position of the radio relic.
+simulated position of the NW radio relic.
 This method depends the estimate of the
 time evolution of the relic velocity, which gives the upper and lower
 bounds on the possible position of the relic for each scenario. The
-uncertainty of the time evolution of the velocity of the shock stem from
-how the velocity depends on a number of physical quantities, including the
+uncertainty of velocity stem depends on a number of physical quantities, including the
 local gravitational potential, matter density, temperature, pressure among
 others (\citealt{E98}, Shu .F., more citations?).  The exact time evolution
 of the shock velocity requires detailed numerical simulation similar to
-\citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc. 
-We draw physical insight from the simulations of the merger shock of the
+\citet{Springel2007}, \citet{Vazza11}, \citet{Kang2007}, etc.  
+We considered different possibilities of the time evolution of the shock
+velocity since numerical simulation of the shock of El Gordo is not
+available at the time of writing of this paper. We drew physical insight from the simulations of the merger shock of the
 staged numerical simulation of the Bullet cluster from \citet{Springel2007}
 and the cosmological simulation from \citet{Paul2011b}. Right after
 the collision of the subclusters, \citet{Springel2007} shows that the shock speed is
@@ -86,7 +87,7 @@ upper and lower bounds of the time-averaged velocity
 $\langle v_{relic} \rangle$ of the shock between
 the collision of the subclusters and the observed time as:  
 \begin{equation}
-	\langle v_{relic} \rangle \approx \beta~v_{3D,1}(t_{col})  
+	\langle v_{relic} \rangle = \beta~v_{3D,1}(t_{col})  
 \end{equation}
 where $0.8 \leq \beta \leq 1.2$ is a factor that we introduce to represent the
 uncertainty of the speed of the relic and $v_{3D,1}(t_{col})$ refers to the collisional velocity of
@@ -100,13 +101,13 @@ wave slightly as it propagated. By making use of a
 range of $\beta$ values, we examine the how the rate of slow down would
 give a different lower bound of the projected separation of the relic.   
 
-We compare the bounds with the observed position of the NW relic  at RA =
-01:02:46, Decl. = $-49$:14:43 \citep{L13}.
-Three sources of radio relic were identified, including the NW, SE and the
-E relic. The NW radio relic possesses the most extended geometry among all
-the identified relic source. We do not refer to the The SE nor the E radio
-relic in this calculation since we do not have an estimation of the shock
-speed of the SE relic nor the E relic from \citealt{L13} for comparison.    
+%We compare the bounds with the observed position of the NW relic  at RA =
+%01:02:46, Decl. = $-49$:14:43 \citep{L13}.
+%Three sources of radio relic were identified, including the NW, SE and the
+%E relic. The NW radio relic possesses the most extended geometry among all
+%the identified relic source. We do not refer to the The SE nor the E radio
+%relic in this calculation since we do not have an estimation of the shock
+%speed of the SE relic nor the E relic from \citealt{L13} for comparison.    
 
 
 %We incorporate the calculated shock speed of the radio relic as part of
