updated to-do list

--- a/texFiles/app_a_MCMAC_stat_formalism.tex
+++ b/texFiles/app_a_MCMAC_stat_formalism.tex
@@ -1,3 +1,26 @@
-We make a distinction between common Bayesian inference and the formalism
-of the Bayesian framework of the Monte Carlo simulation. 
-Common Bayesian parameter estimations involve: 
+The prior probabilities that we employed can be summarized as: 
+
+%\begin{table*} 
+%\begin{minipage}{180mm} 
+%\caption{Table of comparison of PDFs of the data in the Monte Carlo
+%simulation with different applied priors
+%\label{tab:predictiveposteriorchecking}} 
+%\begin{tabular}{@{}lccccccc@{}}
+%\toprule 
+%&&& Original PDF & & & PDF of data after applying polarization priors \\ 
+%\hline
+%%\multicolumn{3-5}{c}{Default Priors} \multicolumn{6-8}{c}{Default + radio prior} \\
+%%\cmidrule(r){1-3} \cmidrule(r){4-6}
+%Data & Units & Location & 68$\%$ CI$^{\dagger}$ & 95$\%$ 
+%CI & Location & 68$\%$ CI  & 95$\%$ CI \\
+%\hline 
+%$M_{200c_{NW}}$ &$10^{14}$ M$_{\odot}$&&&&&&\\
+%$M_{200c_{SE}}$ &$10^{14}$ M$_{\odot}$&&&&&&\\
+%$z_{NW}$ &/&&&&&&\\
+%$z_{SE}$ &/&&&&&&\\
+%$d_{proj}$ &Mpc&&&&&&\\
+%\bottomrule 
+%\end{tabular} 
+%\footnotesize{\\$\dagger$ CI stands for credible interval } \\ 
+%\end{minipage} 
+%\end{table*} 
