--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -128,30 +128,6 @@ luminosity peaks.
 \label{sec: positionprior}
 \input{2.4_positionprior}
 
-%\begin{table*} 
-%\begin{minipage}{180mm} 
-%\caption{Table of comparison of PDFs of the data in the Monte Carlo
-%simulation with different applied priors
-%\label{tab:predictiveposteriorchecking}} 
-%\begin{tabular}{@{}lccccccc@{}}
-%\toprule 
-%&&& Original PDF & & & PDF of data after applying polarization priors \\ 
-%\hline
-%%\multicolumn{3-5}{c}{Default Priors} \multicolumn{6-8}{c}{Default + radio prior} \\
-%%\cmidrule(r){1-3} \cmidrule(r){4-6}
-%Data & Units & Location & 68$\%$ CI$^{\dagger}$ & 95$\%$ 
-%CI & Location & 68$\%$ CI  & 95$\%$ CI \\
-%\hline 
-%$M_{200c_{NW}}$ &$10^{14}$ M$_{\odot}$&&&&&&\\
-%$M_{200c_{SE}}$ &$10^{14}$ M$_{\odot}$&&&&&&\\
-%$z_{NW}$ &/&&&&&&\\
-%$z_{SE}$ &/&&&&&&\\
-%$d_{proj}$ &Mpc&&&&&&\\
-%\bottomrule 
-%\end{tabular} 
-%\footnotesize{\\$\dagger$ CI stands for credible interval } \\ 
-%\end{minipage} 
-%\end{table*} 
 
 %----------------------------------------------------------------------
 \section{RESULTS} 
@@ -232,8 +208,8 @@ of the merger scenario.
 
 \appendix
 
-%\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
-%\input{app_a_MCMAC_stat_formalism}
+\section{BAYESIAN FORMALISM OF DAWSON'S MONTE CARLO SIMULATION}
+\input{app_a_MCMAC_stat_formalism}
 
 \section{DETAILS AND OUTPUT DIAGNOSTICS FOR THE MCMC MASS INFERENCE}\label{app:MCMC}
 \input{app_b_MCMC}
