changed all "incoming" description of the scenarios to "returning"

--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -50,7 +50,7 @@
 % do we need to explain why we are only using the NW relic not the SE
 % relic?
 We give constraints on the likelihood of the
-outgoing and incoming merger scenarios by comparing the observed and the
+outgoing and returning merger scenarios by comparing the observed and the
 simulated position of the NW radio relic.
 This method depends the estimate of the
 time evolution of the relic velocity, which gives the upper and lower
