--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -144,7 +144,7 @@ luminosity peaks.
 %	\label{fig: positionprior}
 %	\includegraphics[width =\linewidth]{r_relic_4300.png}
 %	\caption{Posterior PDF of likely location of relic based on the
-%    outgoing and incoming scenario. (Explain the colors and what the
+%    outgoing and returning scenario. (Explain the colors and what the
 %	errorbars are.)}
 %\end{figure}
 
