--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,3 +1,6 @@
-We perform tests of how sensitive our parameters are to the design of our
-prior filters and found that shifting of the cutoff values by 5\% would
-only affect the inferred values by X\%. 
+We performed tests of how sensitive our parameters are to the choice of the
+polarization prior cutoff and found that shifting of the cutoff values by
+$2.5\degree$ ($\sim 6.4\%$)  would only affect the inferred values by
+$\sim X\%$ in the most extreme cases. 
+
+%how does this affect the conclusion of our merger scenario? 
