drafting the sensitivitiy analysis section

--- a/texFiles/2.4_positionprior.tex
+++ b/texFiles/2.4_positionprior.tex
@@ -80,6 +80,7 @@ drop slightly with time.
 The projected separation of the shock is approximated as:
 \begin{equation}
 	s_{proj} = \langle v_{relic} \rangle (\hat{t}_{obs} - \hat{t}_{col}) \cos(\hat{\alpha})
+	\label{eqn: projectedsep}
 \end{equation}
 where the quantities with hats on the right hand side of the equations were
 inferred from the simulation, and $s_{proj}$ is the estimated projected separation and we estimated the
