--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -1,6 +1,19 @@
-We performed tests of how sensitive our parameters are to the choice of the
-polarization prior cutoff and found that shifting of the cutoff values by
-$2.5\degree$ ($\sim 6.4\%$)  would only affect the inferred values by
-$\sim X\%$ in the most extreme cases. 
+We performed tests of how each of the output variables vary according to the
+choice of the cutoff of the polarization prior.
+We found that in the most extreme cases, shifting of the cutoff values by
+$2.5\degree$ ($\sim 6.4\%$ of the choosen cut off), the location of the output
+variable, PARAM, is changed by $X\%$. The CI of BLAH variable is the most
+sensitive to the prior and changed by $X\%$ from CI_LOWER, CI_UPPER to
+CI_LOWER to CI_UPPER for the $68\%$ credible interval. 
+
+The overall effect of varying the cutoff value does / does not favor the
+returning scenario more. 
 
 %how does this affect the conclusion of our merger scenario? 
+% talk about the sensitivity tests for TSM_1 and TSM_0
+% talk about the sensitivity tests for  
+
+
+
+
+
