--- a/texFiles/2.3_1_polarization_prior.tex
+++ b/texFiles/2.3_1_polarization_prior.tex
@@ -17,7 +17,9 @@ which, despite various inputs for spectral indices and magnetic field strength, 
 polarization fraction as a function of $\alpha$. 
 %This assumption is yet to be verified by cosmological simulations of radio relic. 
 In particular, we refer to a model from \cite{E98} that would give the most
-conservative estimate on the upper bound of $\alpha$. 
+conservative estimate on the upper bound of $\alpha$. This model we picked
+correspond to the strong field case with the relic being supported by
+magnetic pressure only, with a radio spectral index of $\alpha = 1$. 
 This model predicts a maximum integrated polarization fraction of
 $\sim75\%$ when $\alpha = 0$ . From this model, the observed integrated
 polarization fraction of 33\% corresponds to $\mu_\alpha =  39\degree$. 
