--- a/texFiles/3.3_sens_analysis.tex
+++ b/texFiles/3.3_sens_analysis.tex
@@ -2,12 +2,12 @@ We performed tests of how each of the output variables vary according to the
 choice of the cutoff of the polarization prior.
 We found that in the most extreme cases, shifting of the cutoff values by
 $2.5\degree$ ($\sim 6.4\%$ of the choosen cut off), the location of the output
-variable, $v_{3D}(t_{obs})$, is changed by $\%$. The CI of BLAH variable is the most
-sensitive to the prior and changed by $X\%$ from CI_LOWER, CI_UPPER to
+variable, $v_{3D}(t_{obs})$, is changed by $\%$. The CI of BLAH variable is
+the most sensitive to the prior and changed by $X\%$ from CI_LOWER, CI_UPPER to
 CI_LOWER to CI_UPPER for the $68\%$ credible interval. 
 
-The overall effect of varying the cutoff value does/ does not favor the
-returning scenario more. 
+The overall effect of varying the cutoff value does not favor the
+returning scenario significantly more. 
 
 %Should also talk about angle uncertainty between choosing different models
 %and how the sensitivity test show the percentage tests for those. 
