updated tasklist from Readme

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -12,6 +12,7 @@
 %   NW and SE notation
 % - add Williamson 's paper as one of the reference for the first mention
 %   of El Gordo
+% - need citation for the estimated spectroscopic redshift of El Gordo
 %----------------------------------------------------------------------
 
 %\textbf{to motivate why we want to do this study} 
