--- a/texFiles/2.1_2_WL.tex
+++ b/texFiles/2.1_2_WL.tex
@@ -1,4 +1,3 @@
-
 %The input 
 We obtained the PDFs of the masses of the subclusters by doing a Monte
 Carlo Markov Chain (MCMC) analysis of the reduced shear from the
@@ -17,9 +16,9 @@ was not achieved. After convergence was achieved, we removed the
 burn-in portions of the MCMC chains and used the resulting MCMC chains as
 samples of the PDFs of the masses. \par 
 % this is from Jee13 section 3.5
-We make use of an effective redshift of $z_{\text{eff}} = 1.37$ or $\beta
-= 0.276$ \citepalias{Jee13} and $g' \approx (1 + 0.79 \kappa)~g$ \citepalias{Jee13}
-and \citep{Seitz97}.    
+We make use of an effective redshift of $z_{\text{eff}} = 1.37$ or $D_{LS}
+/ D_L = 0.276$ \citepalias{Jee13} and $g'\approx(1 + 0.79 \kappa)g$
+(\citetalias{Jee13}, \citealt{Seitz97}).    
 %\textbf{The inputs of our MCMC mass inference are from proposal blah,
 %which is similar to \citepalias{Jee13}, however, this
 %separate implementation of the MCMC analysis code is different than
@@ -33,12 +32,14 @@ position of the centers of the NFW halos to be  the luminosity peaks of the
 respective galaxy populations of  the two subclusters, which are at R.A. $=
 01$:02:51.68, Decl. = $-49$:15:04.40 and R.A. = $01$:02:38.38, Decl. =
 $-49$:16:37.64 for the NW and SE subclusters
-respectively \citepalias{Jee13}. (! Lori and Nick actually asked why we do not free
+respectively \citepalias{Jee13}. The separations between the luminosity
+peaks and the estimated mass centroids of the subclusters are $X kpc$ and
+$X kpc$ respectively for the NW and SE subcluster.  (! Lori and Nick actually asked why we do not free
 the centroids like Jee 13)  The agreement between our analysis and \citepalias{Jee13} to within
 the 68\% credible interval serves as a sanity check on the estimated masses. 
 %Other sanity check including the control of acceptance rate between 20\%
 %and 50\%. 
 
-The mass estimates from \citealt{Jee13} are $M_{200c} = 13.8 \pm
-2.2 \times 10^{14}~h_{70}^{-1} M_{\sun}$ for the NW subcluster and $ M_{200c} = 7.8 \pm
-2.0 \times 10^{14}~h_{70}^{-1} M_{\sun}$ for the SE subcluster. 
+The mass estimates from \citealt{Jee13} are $M_{200c} = 13.8~\pm~2.2\times
+10^{14}~h_{70}^{-1} M_{\sun}$ for the NW subcluster and $M_{200c} = 7.8~\pm
+2.0\times10^{14}~h_{70}^{-1} M_{\sun}$ for the SE subcluster. 
