--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -2,10 +2,11 @@
 \input{bib_alias}
 
 %-----------------------------------------------------------------------
-\title[El Gordo]{The dynamics and the merging scenario of the galaxy cluster 
+\title[The dynamics and merging scenario of ACT-CL
+J0102-4915, El Gordo]{The dynamics and merging scenario of the galaxy cluster 
 ACT-CL J0102-4915, 
 El Gordo}
-\author[author]{K. Y. Ng$^{1}$, W. A. Dawson$^{2}$, D. Wittman$^{1}$, J.
+\author[K. Y. Ng et al.]{K. Y. Ng$^{1}$, W. A. Dawson$^{2}$, D. Wittman$^{1}$, J.
 Jee$^{1}$, J. Hughes$^{3}$, F. Menanteau$^{3}$, C. Sif\'{o}n$^{4}$\\
 (temporary order)\\
 $^{1}$Department of Physics, University of California Davis, One Shields
@@ -20,7 +21,6 @@ Leiden, Netherlands\\}
 \begin{document}
 %%---------to adjust for the weird bottom margin-----------
 %\voffset=-.8in \hoffset=.15in
-
 \date{arXiV 666} \pagerange{\pageref{firstpage}--\pageref{lastpage}}
 \pubyear{1988} \maketitle \label{firstpage}
 %-----------------------------------------------------------------------
@@ -40,7 +40,7 @@ galaxies: high redshift
 \input{1_intro}
 
 %-----------------------------------------------------------------------
-\section[]{METHOD -- Monte Carlo simulation} 
+\section{METHOD -- Monte Carlo simulation} 
 \input{2.0_montecarlo_framework}
 
 \subsection{Inputs of the Monte Carlo simulation}
