--- a/texFiles/4.4_uncertainties_radio_prior.tex
+++ b/texFiles/4.4_uncertainties_radio_prior.tex
@@ -1,2 +1,4 @@
 needs better simulation to understand the physical properties of radio relic.
 
+position information can be used better to constraint the angle / the TSC,
+projection effects - can be degenerate according to \cite{S13}   
