--- a/texFiles/2.0_montecarlo_framework.tex
+++ b/texFiles/2.0_montecarlo_framework.tex
@@ -45,7 +45,8 @@ chain rule underlies the simulation can be written as:
     P(\vec{\theta}|\vec{D}) \propto P(\vec{D}|\vec{\theta})P(\vec{\theta})
 \end{equation}
 where the likelihood is defined to be the PDF of $\vec{D}$ given $\vec{\theta}$,
-i.e. the input variables, not statistical parameters, and the priors are
+%i.e. the input variables, not statistical parameters, 
+and the priors are
 defined to be the probabilities due to prior knowledge of the estimated values of
 $\vec{\theta}$. The output variables $\vec{\theta}^\prime$, on the other
 hand, were computed according to the conservation of energy, which is
