--- a/texFiles/2.1_2_WL.tex
+++ b/texFiles/2.1_2_WL.tex
@@ -23,11 +23,7 @@ We make use of an effective redshift of $z_{\text{eff}} = 1.37$ or $D_{LS}
 %which is similar to \citepalias{Jee13}, however, this
 %separate implementation of the MCMC analysis code is different than
 %\citepalias{Jee13}.} 
-We used a catalog of reduced and bias-corrected background 
-galaxy shapes from Hubble Space Telescope PROP 12755, and these galaxies
-were discussed as the population in Region A in
-\citetalias{Jee13}. (! \citealt{Jee13} actually used
-additional data) On the other hand, we fixed the
+On the other hand, we fixed the
 position of the centers of the NFW halos to be  the luminosity peaks of the
 respective galaxy populations of  the two subclusters, which are at R.A. $=
 01$:02:51.68, Decl. = $-49$:15:04.40 and R.A. = $01$:02:38.38, Decl. =
