--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -38,8 +38,9 @@ galaxies: high redshift
 \section{Introduction} 
 (NOT READY FOR PRIME TIME)
 \input{1_intro}
-
 %-----------------------------------------------------------------------
+\section{DATA}
+\input{2.0_data_section.tex}
 \section{METHOD -- Monte Carlo simulation} 
 \input{2.0_montecarlo_framework}
 
@@ -85,11 +86,8 @@ different ways of denoting the uncertainties do not affect the simulation.\\
 	\caption{\label{fig:membership} The division of
 the member galaxies among the two subclusters of El Gordo by a spatial cut
 (green line) that is approximately perpendicular to the 2D merger axis
-\citepalias{M11}.
-The color bar shows the color mapping of the spectroscopic redshift of the
-member galaxies. The spatial cut is done after mapping the world coordinates to
-pixel coordinates to avoid anamorphic distortion. (changed background to
-gray since Nick said the white background makes the dots hard to see)}
+\citepalias{M11}. The color bar shows the color mapping of the spectroscopic redshift of the
+member galaxies.} 
 \end{figure}
 
 %-----------------------------------------------------------------------
@@ -176,7 +174,7 @@ luminosity peaks.
 
 %-----------------------------------------------------------------------
 
-\section{SUMMARY \& CONCLUSION}
+\section{SUMMARY \& CONCLUSION} (Maybe not needed if there is a discussion)
 This paper presents one of the first examples of using the observed radio
 relic emission to constrain cluster merger properties.
 While we have demonstrated how to use the physical properties of the radio
