--- a/texFiles/2.1_1_membership_redshift.tex
+++ b/texFiles/2.1_1_membership_redshift.tex
@@ -7,9 +7,9 @@
 We used a 2D spatial cut to determine members of the two
 subclusters, then bootstrapped the biweight locations of the redshifts of the
 respective members in order to obtain the PDFs of the redshifts of each
-subcluster. We made use of the spectroscopic data
-obtained from the Very Large Telescope (VLT) and Germini South as described
-in \citetalias{M11} and \citet{Sifon13}. The overall membership of the galaxies
+subcluster. The spatial cut is done after mapping the world coordinates to
+pixel coordinates to avoid anamorphic distortion. 
+ The overall membership of the galaxies
 of El Gordo was determined using a shifting gapper method after applying a
 rest frame cut of 4000~\kilo\meter~\second$^{-1}$. This method gives a
 total count of 89 galaxy members of El Gordo. From the 2D spatial cut of
@@ -18,7 +18,8 @@ subclusters and 35 members in the SE subclusters (See Figure
 \ref{fig:membership}). The spectroscopic redshift of the clusters were
 determined to be $z_{NW} = 0.86901 \pm 0.00017$ and $z_{SE} = 0.87175 \pm
 0.00019$, where the quoted numbers represent the biweight location and
-biweight scale respectively \citep{Beers90}. The biweight location
+biweight scale respectively \citep{Beers90}. 
+The biweight location
 estimators are less susceptible to outliers than the mean and standard
 deviations. 
 
